Added clojurescript as dep; changed license to gpl3